# Sentinel

./: .env  .replit  ANALYSIS_CORRELATION_MATRIX.md  API_SETUP_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  FINAL_INTEGRATION_SUMMARY.md  FRONTEND_MITRE_FIX_SUMMARY.md  MITRE_ANALYSIS_TEST_SUITE.md  MITRE_ATTACK_INTEGRATION.md  MITRE_INTEGRATION_SUMMARY.md  MITRE_LINKS_GUIDE.md  MITRE_WIRE_TRANSFER_FIX.md  PERFORMANCE_VALIDATION.md  PHISHING_TEST_EMAILS.md  QuickOfflineServiceFix.md  README.md 20-15-59-727.md  TESTING.md  USER_ACCEPTANCE_TESTING.md  VT_DEBUG_TEST.md  VT_URL_DEBUG.md  check_services.sh  nohup.out  package-lock.json  package.json  pyproject.toml  quick_test.sh  replit.md  setup.bat  setup.sh  simple_test.sh  start-full-stack.sh  start_backend.sh  tailwind.config.ts  test_analysis_consistency.sh  test_frontend_backend.html  test_frontend_mitre_fix.sh  test_mitre_analysis.sh  validate_system.py
backend 20-15-57-708/: .coverage  .env  .env.example  PERFORMANCE_OPTIMIZATIONS.md  SECURITY_PERFORMANCE.md  comprehensive_phase2_test.py  debug_analysis.py  demo_llm_analyzer.py  pyproject.toml  requirements.txt  run_tests.py  simple_phase2_test.py  test_api_keys.py  test_complete_ai_framework.py  test_dependencies.py  test_email_analysis.py  test_full_mitre_integration.py  test_google_direct.py  test_minimal_analysis.py  test_mitre_integration.py  test_phase2_llm_integration.py  test_phase3_deterministic.py  test_phase4_comprehensive.py  test_simple_api.py  test_threat_intel.py  threat_intel.db  validate_security.py
backend 20-15-57-708/app/: complete_ai_test.db  main.py  threat_intel.db
backend 20-15-57-708/app/api/: dependencies.py
backend 20-15-57-708/app/core/: config.py  exceptions.py  security.py
backend 20-15-57-708/tests/: test_email_parser.py  test_ioc_extractor.py  test_llm_analyzer.py  test_logging.py  test_main.py  test_security_features.py
frontend/: .env.example  index.html  (+4 more)
(+105 files in other folders)
