[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.1",
    "anthropic>=0.68.0",
    "black>=25.9.0",
    "fastapi>=0.117.1",
    "feedparser==6.0.10",
    "flake8>=7.3.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "openai>=1.109.0",
    "psutil>=7.1.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "uvicorn>=0.37.0",
]
